iptables/rules.v4
# Generated by iptables-save v1.8.7 on Sun Jul  2 19:58:54 2023
*filter
:INPUT DROP [14:1526]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [272:44764]
:sshguard - [0:0]
-A INPUT -p tcp -m tcp --dport 22345 -j sshguard
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -i lo -j ACCEPT
COMMIT
# Completed on Sun Jul  2 19:58:54 2023
