iptables/rules.v6
# Generated by ip6tables-save v1.8.7 on Sun Jul  2 19:58:59 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:sshguard - [0:0]
-A INPUT -p tcp -m tcp --dport 22345 -j sshguard
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 0 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::6/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/128 -j ACCEPT
-A INPUT -i lo -j ACCEPT
COMMIT
# Completed on Sun Jul  2 19:58:59 2023
